tests/field/call_non_fn_field.rz
struct Foo { bar: str }

var foo = Foo()
foo.bar = "not fn"

foo.bar() // error: only functions and structures are callable